WanaLyzer/out/numpy/typing/tests/data/pass/literal.pyi
from _typeshed import Incomplete
from collections.abc import Callable as Callable

AR: Incomplete
KACF: Incomplete
ACF: Incomplete
CF: Incomplete
order_list: list[tuple[frozenset, Callable]]
invalid_orders: Incomplete
