WanaLyzer/out/numpy/typing/tests/data/fail/arrayprint.pyi
import numpy as np
from collections.abc import Callable as Callable
from typing import Any

AR: np.ndarray
func1: Callable[[Any], str]
func2: Callable[[np.integer[Any]], str]
